<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="desc">desc</string>
    //^Used to fill content desc when needed//
    <string name="artist_recommeded">JJ Lin</string>
    <string name="version_header">Version</string>
    <string name="version_num">1.00</string>
    //version related//

    //This chunk of strings are just so i dont have to hard code them. I could, but this makes it neater
    <string name="dark_mode">Dark Mode</string>
    <string name="theme">Theme</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Log In</string>
    <string name="donthaveaccount">Dont have an account? Sign Up</string>
    <string name="myPlaylistHeader">My Playlist</string>
    <string name="songsYouMayLikeHeader">Songs You May Like</string>
    <string name="mainSong">离开你以后</string>
    <string name="byLine">By: Eric Chou</string>
    <string name="artist_artist">JJ Lin</string>
    <string name="artist_song_name">当你</string>
    <string name="artist_song_duration">4min 15secs</string>
    <string name="artist_album">她说</string>
    <string name="yourPlaylist">Your Playlists</string>
    <string name="favouritedSongs">Favourited Songs</string>
    <string name="collections_favourited_song">雾里</string>
    <string name="collections_favourited_artist">姚六一</string>
    <string name="collectionsHeader">Collections</string>
    <string name="artistsYouMayLike">Artist You May Like</string>
    <string name="defaulttime">0.00</string>
    <string name="artist_song_duration_num">4.15</string>
    <string name="sampletext">Sample</string>
    <string name="myplaylistst">Playlist</string>
    <string name="jokerxue">Joker Xue</string>
    <string name="chen">尘</string>
</resources>
