<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ArtistRecommendedActivity">

    <Button
        android:id="@+id/toolbar_button_right_artist"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:background="@color/purple_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/toolbar_button_settings_artist"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/desc"
        android:onClick="globallyTravelToSettings"
        android:scaleType="fitXY"
        android:scaleX="0.25"
        android:scaleY="0.9"
        android:src="@drawable/settings_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/toolbar_button_middle_artist"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@color/purple_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/toolbar_button_collection_artist"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/desc"
        android:onClick="globallyTravelToCollections"
        android:scaleType="fitXY"
        android:scaleX="0.2"
        android:scaleY="0.5"
        android:src="@drawable/collection_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/toolbar_button_left_artist"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:layout_marginStart="140dp"
        android:background="@color/purple_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/toolbar_button_home_artist"
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/desc"
        android:onClick="globallyTravelToHome"
        android:scaleType="fitCenter"
        android:src="@drawable/home_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/cover_artist_ArtistCover"
        android:layout_width="410dp"
        android:layout_height="374dp"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/artist_cover_jj" />

    <ImageButton
        android:id="@+id/btnBack_artist"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="350dp"
        android:layout_marginBottom="350dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/desc"
        android:onClick="bacKk"
        android:scaleType="fitCenter"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtView_artist_ArtistName"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:layout_marginBottom="436dp"
        android:background="@color/purple_light"
        android:fontFamily="@font/theoneilluseveryoften"
        android:text="@string/artist_artist"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:layout_width="410dp"
        android:layout_height="396dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_artist_ArtistName"
        app:layout_constraintVertical_bias="0.0">

        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnMore_artist"
                android:layout_width="50dp"
                android:layout_height="16dp"
                android:layout_marginStart="347dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="18dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/desc"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/more_options_button" />

            <TextView
                android:id="@+id/txtView_artist_AlbumName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:layout_marginEnd="268dp"
                android:layout_marginBottom="31dp"
                android:text="@string/artist_album"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/cover_artist_song1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/desc"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/jj_lin_dang_ni" />

            <TextView
                android:id="@+id/txtView_artist_Song1Duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="256dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="73dp"
                android:layout_marginBottom="15dp"
                android:text="@string/artist_song_duration"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_artist_playlist1"
                android:layout_width="408dp"
                android:layout_height="50dp"
                android:backgroundTint="#00000000" />
        </GridView>

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>